# dig-logging

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml
examples/: demo.rs
runbooks/: local.md
src/: bundle.rs  correlation.rs  dirs.rs  error.rs  filter.rs  init.rs  janitor.rs  layer.rs  lib.rs  logs.rs  redact.rs  schema.rs  writer.rs
tests/: end_to_end.rs  logs_cli.rs
